--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <header class="container">
-        <h1>
-            <a href="index.html">Styles Conference</a>
+    <header class="container group">
+        <h1 class="logo">
+            <a href="index.html">Styles <br> Conference</a>
         </h1>
         <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
         <nav>
@@ -53,7 +53,7 @@
             <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
         </section>
     </section>
-    <footer class="container">
+    <footer class="container primary-footer group">
         <small>&copy; Styles Conference</small>
         <nav>
             <a href="index.html">Home</a>
