--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/stylesheets/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
     <title>Document</title>
 </head>
 
@@ -13,8 +14,8 @@
         <h1 class="logo">
             <a href="index.html">Styles <br> Conference</a>
         </h1>
-        <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-        <nav>
+        <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+        <nav class="nav primary-nav">
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
             <a href="schedule.html">Schedule</a>
@@ -32,7 +33,7 @@
     </section>
     <section class="grid">
         <!-- Speakers -->
-        <section class="col-1-3">
+        <section class="teaser col-1-3">
             <a href="speakers.html">
                 <h5>Speakers</h5>
                 <h3>World-Class Speakers</h3>
@@ -44,7 +45,7 @@
              Schedule
 
          -->
-        <section class="col-1-3">
+        <section class="teaser col-1-3">
             <a href="schedule.html">
                 <h5>Schedule</h5>
                 <h3>Three Inspiring Days</h3>
@@ -56,7 +57,7 @@
             Venue
   
         -->
-        <section class="col-1-3">
+        <section class="teaser col-1-3">
             <a href="venue.html">
                 <h5>Venue</h5>
                 <h3>The Chicago Theatre</h3>
@@ -64,7 +65,7 @@
             <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
         </section>
     </section>
-    <footer class="container primary-footer group">
+    <footer class="nav container primary-footer group">
         <small>&copy; Styles Conference</small>
         <nav>
             <a href="index.html">Home</a>
