--- a/index.html
+++ b/index.html
@@ -40,45 +40,41 @@
     <section class="row">
         <div class="grid">
             <!-- Speakers -->
-            <section class="row-alt">
-                <div class="lead container">
+            <section class="teaser col-1-3">
                     <a href="speakers.html">
-                        <h1>Speakers</h1>
+                        <h5>Speakers</h5>
                         <h3>World-Class Speakers</h3>
                     </a>
                     <p>Joining us from all around the world are over twenty fantastic speakers, here to share their
                         stories.
                     </p>
-                </div>
             </section>
             <!--
 
              Schedule
 
          -->
-            <section class="row-alt">
-                <div class="lead container">
-                    <a href="schedule.html">
-                        <h1>Schedule</h1>
-                        <h3>Three Inspiring Days</h3>
-                    </a>
-                    <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-                </div>
+            <section class="teaser col-1-3">
+                <a href="schedule.html">
+                    <h5>Schedule</h5>
+                    <h3>Three Inspiring Days</h3>
+                </a>
+                <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+
             </section>
             <!--
   
             Venue
   
         -->
-            <section class="row-alt">
-                <div class="lead container">
-                    <a href="venue.html">
-                        <h1>Venue</h1>
-                        <h3>The Chicago Theatre</h3>
-                    </a>
-                    <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference
-                        venue.</p>
-                </div>
+            <section class="teaser col-1-3">
+                <a href="venue.html">
+                    <h5>Venue</h5>
+                    <h3>The Chicago Theatre</h3>
+                </a>
+                <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference
+                    venue.</p>
+
             </section>
         </div>
     </section>
