--- a/speakers.html
+++ b/speakers.html
@@ -46,12 +46,28 @@
             <section class="speaker" id="chris-mills">
 
                 <div class="col-2-3">
-                    ...
+                    <h2>Shay Howe</h2>
+                    <h5>Less Is More: How Constraints Cultivate Growth</h5>
+
+                    <p>By setting constraints, we force ourselves...</p>
+
+                    <h5>About Shay</h5>
+
+                    <p>As a designer and front-end developer, Shay...</p>
                 </div><!--
           
                 -->
                 <aside class="col-1-3">
-                    ...
+                    <div class="speaker-info">
+
+                        <img src="/assets/stylesheets/images/speakers/shay-howe.jpg" alt="Shay Howe">
+
+                        <ul>
+                            <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
+                            <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
+                        </ul>
+
+                    </div>
                 </aside>
 
             </section>
@@ -59,12 +75,28 @@
             <section id="shay-howe">
 
                 <div class="col-2-3">
-                    ...
+                    <h2>Shay Howe</h2>
+                    <h5>Less Is More: How Constraints Cultivate Growth</h5>
+
+                    <p>By setting constraints, we force ourselves...</p>
+
+                    <h5>About Shay</h5>
+
+                    <p>As a designer and front-end developer, Shay...</p>
                 </div><!--
               
                 -->
                 <aside class="col-1-3">
-                    ...
+                    <div class="speaker-info">
+
+                        <img src="/assets/stylesheets/images/speakers/shay-howe.jpg" alt="Shay Howe">
+
+                        <ul>
+                            <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
+                            <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
+                        </ul>
+
+                    </div>
                 </aside>
 
             </section>
@@ -83,10 +115,13 @@
                 <aside class="col-1-3">
                     <div class="speaker-info">
 
+                        <img src="/assets/stylesheets/images/speakers/shay-howe.jpg" alt="Shay Howe">
+
                         <ul>
                             <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
                             <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
                         </ul>
+
                     </div>
                 </aside>
 
