--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/stylesheets/main.css">
+    <link rel="stylesheet" href="assets/stylesheets/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
     <title>Document</title>
 </head>
@@ -43,7 +43,7 @@
             <section class="teaser col-1-3">
                 <h5>Speakers</h5>
                 <a href="speakers.html">
-                    <img src="/assets/stylesheets/images/home/speakers.jpg" alt="Professional Speaker">
+                    <img src="assets/stylesheets/images/home/speakers.jpg" alt="Professional Speaker">
                     <h3>World-Class Speakers</h3>
                 </a>
                 <p>Joining us from all around the world are over twenty fantastic speakers, here to share their
@@ -58,7 +58,7 @@
             <section class="teaser col-1-3">
                 <h5>Schedule</h5>
                 <a href="schedule.html">
-                    <img src="/assets/stylesheets/images/home/schedule.jpg" alt="Schedule">
+                    <img src="assets/stylesheets/images/home/schedule.jpg" alt="Schedule">
                     <h3>Three Inspiring Days</h3>
                 </a>
                 <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
@@ -72,7 +72,7 @@
             <section class="teaser col-1-3">
                 <h5>Venue</h5>
                 <a href="venue.html">
-                    <img src="/assets/stylesheets/images/home/venue.jpg" alt="Venue">
+                    <img src="assets/stylesheets/images/home/venue.jpg" alt="Venue">
                     <h3>The Chicago Theatre</h3>
                 </a>
                 <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference
