--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/stylesheets/main.css">
+  <link rel="stylesheet" href="assets/stylesheets/main.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   <title>Register</title>
 </head>
