--- a/speakers.html
+++ b/speakers.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/stylesheets/main.css">
+    <link rel="stylesheet" href="assets/stylesheets/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
     <title>Document</title>
 </head>
@@ -60,7 +60,7 @@
                 <aside class="col-1-3">
                     <div class="speaker-info">
 
-                        <img src="/assets/stylesheets/images/speakers/shay-howe.jpg" alt="Shay Howe">
+                        <img src="assets/stylesheets/images/speakers/shay-howe.jpg" alt="Shay Howe">
 
                         <ul>
                             <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
@@ -89,7 +89,7 @@
                 <aside class="col-1-3">
                     <div class="speaker-info">
 
-                        <img src="/assets/stylesheets/images/speakers/shay-howe.jpg" alt="Shay Howe">
+                        <img src="assets/stylesheets/images/speakers/shay-howe.jpg" alt="Shay Howe">
 
                         <ul>
                             <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
@@ -115,7 +115,7 @@
                 <aside class="col-1-3">
                     <div class="speaker-info">
 
-                        <img src="/assets/stylesheets/images/speakers/shay-howe.jpg" alt="Shay Howe">
+                        <img src="assets/stylesheets/images/speakers/shay-howe.jpg" alt="Shay Howe">
 
                         <ul>
                             <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
